<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="userVM" type="com.glosaryconstarint.app.modules.user.data.viewmodel.UserVM"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintUser"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageImage"
            android:layout_height="@dimen/_79pxh"
            android:layout_marginEnd="@dimen/_174pxh"
            android:layout_marginStart="@dimen/_175pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="@dimen/_79pxh"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtProfile"
            circular="@{true}" imageRes="@{@drawable/img_image_3}" tools:src="@drawable/img_image_3"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintFrame"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_151pxh"
            android:layout_marginStart="@dimen/_151pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="0dp"
            app:layout_constraintBottom_toTopOf="@+id/txtgeorge31"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/imageImage">
            <ImageView android:id="@+id/imageFrame"
                android:layout_height="@dimen/_20pxh"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="@dimen/_20pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_frame_3"
                app:layout_constraintBottom_toBottomOf="@+id/txtGeorgeD"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtGeorgeD" app:layout_constraintTop_toTopOf="@+id/txtGeorgeD"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGeorgeD"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{userVM.userModel.txtGeorgeD}"
                app:layout_constraintEnd_toStartOf="@+id/imageFrame"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/txtMontserratregular20" tools:text="@string/lbl_george_d"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView android:ellipsize="end" android:gravity="center"
            android:id="@+id/txtgeorge31"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_181pxh"
            android:layout_marginStart="@dimen/_169pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="0dp" android:singleLine="true"
            android:text="@{userVM.userModel.txtgeorge31}"
            app:layout_constraintBottom_toTopOf="@+id/constraintGroup268"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintFrame"
            style="@style/txtMontserratregular14_2" tools:text="@string/lbl_george31"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintGroup268"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtgeorge31" style="@style/groupStylegray_101cornerRadius">
            <EditText android:drawablePadding="@dimen/_10pxh"
                android:drawableStart="@drawable/img_frame_4"
                android:ellipsize="end"
                android:hint="@string/lbl_my_orders"
                android:id="@+id/etMyOrders"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="0dp"
                android:paddingBottom="@dimen/_18pxv"
                android:paddingStart="@dimen/_24pxh"
                android:paddingTop="@dimen/_1pxv"
                android:singleLine="true"
                android:text="@={userVM.userModel.etMyOrdersValue}"
                android:textColorHint="@color/gray_601"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" style="@style/etMontserratregular18"/>
            <EditText android:drawablePadding="@dimen/_10pxh"
                android:drawableStart="@drawable/img_frame_8"
                android:ellipsize="end"
                android:hint="@string/msg_my_subscription"
                android:id="@+id/etMySubscription"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="0dp"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_24pxh"
                android:paddingTop="@dimen/_1pxv"
                android:singleLine="true"
                android:text="@={userVM.userModel.etMySubscriptionValue}"
                android:textColorHint="@color/gray_602"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etMyOrders" style="@style/etMontserratregular18_1"/>
            <EditText android:drawablePadding="@dimen/_10pxh"
                android:drawableStart="@drawable/img_frame_9"
                android:ellipsize="end"
                android:hint="@string/lbl_my_addresses"
                android:id="@+id/etMyAddresses"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="0dp"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingStart="@dimen/_24pxh"
                android:paddingTop="@dimen/_1pxv"
                android:singleLine="true"
                android:text="@={userVM.userModel.etMyAddressesValue}"
                android:textColorHint="@color/gray_602"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etMySubscription" style="@style/etMontserratregular18_1"/>
            <EditText android:drawablePadding="@dimen/_10pxh"
                android:drawableStart="@drawable/img_frame_10"
                android:ellipsize="end"
                android:hint="@string/lbl_my_wallet"
                android:id="@+id/etMyWallet"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_width="0dp"
                android:paddingBottom="@dimen/_12pxv"
                android:paddingStart="@dimen/_24pxh"
                android:paddingTop="@dimen/_1pxv"
                android:singleLine="true"
                android:text="@={userVM.userModel.etMyWalletValue}"
                android:textColorHint="@color/gray_602"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etMyAddresses" style="@style/etMontserratregular18_1"/>
            <EditText android:drawableEnd="@drawable/img_icon_5"
                android:drawablePadding="@dimen/_10pxh"
                android:drawableStart="@drawable/img_frame_11"
                android:ellipsize="end"
                android:hint="@string/lbl_notifications"
                android:id="@+id/etNotifications"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="0dp"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_16pxh"
                android:paddingStart="@dimen/_24pxh"
                android:paddingTop="@dimen/_5pxv"
                android:singleLine="true"
                android:text="@={userVM.userModel.etNotificationsValue}"
                android:textColorHint="@color/gray_602"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etMyWallet" style="@style/etMontserratregular18_1"/>
            <EditText android:drawablePadding="@dimen/_10pxh"
                android:drawableStart="@drawable/img_frame_12"
                android:ellipsize="end"
                android:hint="@string/lbl_settings"
                android:id="@+id/etSettings"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_239pxv"
                android:layout_marginTop="@dimen/_29pxv"
                android:layout_width="0dp"
                android:paddingBottom="@dimen/_8pxv"
                android:paddingStart="@dimen/_24pxh"
                android:paddingTop="@dimen/_1pxv"
                android:singleLine="true"
                android:text="@={userVM.userModel.etSettingsValue}"
                android:textColorHint="@color/gray_602"
                app:layout_constraintBottom_toBottomOf="@+id/recyclerFrame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etNotifications" style="@style/etMontserratregular18_1"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerFrame"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_25pxv"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="0dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                itemSpace="@{@dimen/_38pxh}" tools:itemCount="4" tools:listitem="@layout/row_user1"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtProfile"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_175pxh"
            android:layout_marginStart="@dimen/_176pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="0dp" android:singleLine="true"
            android:text="@{userVM.userModel.txtProfile}"
            app:layout_constraintBottom_toTopOf="@+id/imageImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/txtMontserratbold22" tools:text="@string/lbl_profile"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
