<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="otpSentVM" type="com.glosaryconstarint.app.modules.otpsent.data.viewmodel.OtpSentVM"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintOTPsent"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLogo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_103pxh"
            android:layout_marginStart="@dimen/_104pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtSGGrocery"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="0dp" android:singleLine="true"
                android:text="@{otpSentVM.otpSentModel.txtSGGrocery}"
                app:layout_constraintBottom_toBottomOf="@+id/imageGroup400"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageGroup400"
                app:layout_constraintTop_toTopOf="@+id/imageGroup400"
                style="@style/txtMontserratlight28" tools:text="@string/lbl_sg_grocery"/>
            <ImageView android:id="@+id/imageGroup400"
                android:layout_height="@dimen/_53pxh"
                android:layout_width="@dimen/_36pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_group400_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtSGGrocery"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtLoginRegist"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_35pxh"
            android:layout_marginStart="@dimen/_38pxh"
            android:layout_marginTop="@dimen/_115pxv"
            android:layout_width="0dp" android:singleLine="true"
            android:text="@{otpSentVM.otpSentModel.txtLoginRegist}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLogo"
            style="@style/txtMontserratsemibold24" tools:text="@string/msg_login_regist"/>
        <TextView android:ellipsize="end" android:gravity="center"
            android:id="@+id/txtOTPIsSendTo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_66pxh"
            android:layout_marginStart="@dimen/_66pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="0dp" android:singleLine="true"
            android:text="@{otpSentVM.otpSentModel.txtOTPIsSendTo}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLoginRegist"
            style="@style/txtPoppinsmedium18" tools:text="@string/msg_otp_is_send_to"/>
        <com.mukesh.OtpView android:focusableInTouchMode="true"
            android:id="@+id/otpViewOtpview" android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_91pxh"
            android:layout_marginStart="@dimen/_89pxh"
            android:layout_marginTop="@dimen/_55pxv"
            android:layout_width="wrap_content"
            android:textColor="@color/gray_902"
            android:textSize="@dimen/_18pxh" app:OtpItemCount="4"
            app:OtpItemSpacing="@dimen/_16pxh"
            app:OtpItemWidth="@dimen/_49pxh"
            app:OtpLineColor="@color/bluegray_200"
            app:OtpViewType="line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/txtOTPIsSendTo"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnVerifyOTP"
            android:layout_height="@dimen/_50pxv"
            android:layout_marginBottom="@dimen/_454pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="0dp"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl_verify_otp"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtResendIn30s"
            style="@style/btnSolidRounded_6" tools:text="@string/lbl_verify_otp"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtResendIn30s"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_85pxh"
            android:layout_marginStart="@dimen/_229pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="0dp" android:singleLine="true"
            android:text="@{otpSentVM.otpSentModel.txtResendIn30s}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpViewOtpview"
            style="@style/txtMontserratmedium16" tools:text="@string/lbl_resend_in_30s"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
